(library
 (name llvm_bitwriter)
 (public_name llvm.bitwriter)
 (libraries llvm)
 (foreign_stubs
  (language c)
  (names bitwriter_ocaml)
  (include_dirs
   %{env:LLVM_INCLUDE=/usr/include/llvm-13}
   %{env:LLVM_C_INCLUDE=/usr/include/llvm-c-13}))
 (c_library_flags -L%{env:LLVM_LIBDIR=/usr/lib/llvm-13/lib} -lLLVM))
