(library
 (name llvm_bitwriter)
 (public_name llvm.bitwriter)
 (libraries llvm)
 (foreign_stubs
  (language c)
  (names bitwriter_ocaml)
  (flags
   -I%{env:LLVM_INCLUDE=/usr/include/llvm-14}
   -I%{env:LLVM_C_INCLUDE=/usr/include/llvm-c-14}))
 (c_library_flags -L%{env:LLVM_LIBDIR=/usr/lib/llvm-14/lib} -lLLVM))
