(library
 (name llvm_executionengine)
 (public_name llvm.executionengine)
 (libraries llvm llvm.target ctypes)
 (foreign_stubs
  (language c)
  (names executionengine_ocaml)
  (include_dirs
   %{env:LLVM_INCLUDE=/usr/include/llvm-13}
   %{env:LLVM_C_INCLUDE=/usr/include/llvm-c-13}))
 (c_library_flags -L%{env:LLVM_LIBDIR=/usr/lib/llvm-13/lib} -lLLVM))
