(library
 (name llvm_irreader)
 (public_name llvm.irreader)
 (libraries llvm)
 (foreign_stubs
  (language c)
  (names irreader_ocaml)
  (flags
   -fPIC
   -I%{env:LLVM_INCLUDE=/usr/include/llvm-16}
   -I%{env:LLVM_C_INCLUDE=/usr/include/llvm-c-16}))
 (c_library_flags -L%{env:LLVM_LIBDIR=/usr/lib/llvm-16/lib} -lLLVM))
