(library
 (name llvm_linker)
 (public_name llvm.linker)
 (libraries llvm)
 (foreign_stubs
  (language c)
  (names linker_ocaml)
  (flags
   -I%{env:LLVM_INCLUDE=/usr/include/llvm-16}
   -I%{env:LLVM_C_INCLUDE=/usr/include/llvm-c-16}))
 (c_library_flags -L%{env:LLVM_LIBDIR=/usr/lib/llvm-16/lib} -lLLVM))
