(library
 (name llvm)
 (public_name llvm)
 (flags
  (:standard -w -50 -w -37 -w -34 -w -32))
 (foreign_stubs
  (language c)
  (names llvm_ocaml)
  (flags -w :standard)
  (include_dirs
   %{env:LLVM_INCLUDE=/usr/include/llvm-12}
   %{env:LLVM_C_INCLUDE=/usr/include/llvm-c-12}))
 (c_library_flags -L%{env:LLVM_LIBDIR=/usr/lib/llvm-12/lib} -lLLVM))
