(library
 (name llvm_passmgr_builder)
 (public_name llvm.passmgr_builder)
 (libraries llvm)
 (foreign_stubs
  (language c)
  (names passmgr_builder_ocaml)
  (include_dirs
   %{env:LLVM_INCLUDE=/usr/include/llvm-12}
   %{env:LLVM_C_INCLUDE=/usr/include/llvm-c-12}))
 (c_library_flags -L%{env:LLVM_LIBDIR=/usr/lib/llvm-12/lib} -lLLVM))
