(library
 (name llvm_passmgr_builder)
 (public_name llvm.passmgr_builder)
 (libraries llvm)
 (foreign_stubs
  (language c)
  (names passmgr_builder_ocaml)
  (flags
   -I%{env:LLVM_INCLUDE=/usr/include/llvm-14}
   -I%{env:LLVM_C_INCLUDE=/usr/include/llvm-c-14}))
 (c_library_flags -L%{env:LLVM_LIBDIR=/usr/lib/llvm-14/lib} -lLLVM))
