(library
 (name llvm_transform_utils)
 (public_name llvm.transform_utils)
 (libraries llvm)
 (foreign_stubs
  (language c)
  (names transform_utils_ocaml)
  (flags
   -I%{env:LLVM_INCLUDE=/usr/include/llvm-15}
   -I%{env:LLVM_C_INCLUDE=/usr/include/llvm-c-15}))
 (c_library_flags -L%{env:LLVM_LIBDIR=/usr/lib/llvm-15/lib} -lLLVM))
